tests/baselines/reference/asyncFunctionDeclaration8.errors.txt
tests/cases/conformance/async/downlevel/asyncFunctionDeclaration/asyncFunctionDeclaration8.ts(1,11): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.


==== tests/cases/conformance/async/downlevel/asyncFunctionDeclaration/asyncFunctionDeclaration8.ts (1 errors) ====
    var v = { [await]: foo }
              ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.